Tapping an Select-to-Speak tray icon cancels further event propagation.

This makes it possible to read content in menus with the Select-to-Speak
tray button, for example on tablet mode.

Bug: 870922
Change-Id: I3501625721c8d49a2ec422377a83b9f8f036b228
Reviewed-on: https://chromium-review.googlesource.com/1176181
Commit-Queue: Katie Dektar <katie@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583694}
Former-commit-id: ecdb6a3b7887523a80b75a0fa774533a7cb93ac7